--- a/html/controls/media_management.css
+++ b/html/controls/media_management.css
@@ -1,8 +1,7 @@
 
 /* Template */
   body>table.TypeTemplate { display: none; }
-  body>div.AddSpecificDialogTemplate { display: none; }
-  body>div.RemoveTypeDialogTemplate { display: none; }
+  body>div.DialogTemplate { display: none; }
   body>div.TabTemplate { display: none; }
   table tr.ItemTemplate { display: none; }
   table tr.AvailableTemplate { display: none; }
@@ -19,7 +18,7 @@
   table.Type tr.Type>th.Type>a.Type { font-size: 150%; }
   table.Type>thead>tr.Type { text-align: left; }
   table.Type>thead>tr.Type>th { padding-left: 15px; padding-right: 15px; }
-  table.Type>thead>tr.Type>th>button.Available { float: right; }
+  table.Type>thead>tr.Type>th>button.Right { float: right; }
   table.Type>thead>tr.Controls { text-align: center; }
   table.Type>tbody>tr { text-align: center; }
   table.Type button.ui-widget { font-size: 75%; }
