--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -53,6 +53,10 @@ table.RowTable { border-spacing: 0px; }
   #TeamTime table.Team tr.Name td.Logo img { height: 50px; vertical-align: middle; }
   #TeamTime table.Team tr.Score td.Score a { font-size: 300%; }
   #TeamTime table.Team tr.Timeout td.Timeouts a { font-size: 200%; }
+  #TeamTime table.Team tr.Jammer td.Jammer:not(.ByName) select.Jammer.ByName { display: none; }
+  #TeamTime table.Team tr.Jammer td.Jammer:not(.ByNumber) select.Jammer.ByNumber { display: none; }
+  #TeamTime table.Team tr.Jammer td.Jammer:not(.AlphaSort) select.Jammer.AlphaSort { display: none; }
+  #TeamTime table.Team tr.Jammer td.Jammer:not(.NumSort) select.Jammer.NumSort { display: none; }
 
   #TeamTime table.Time>tbody>tr>td { width: 20%; }
   #TeamTime table.Time tr.Name td.Name.Running { background: #3f3; }
