--- a/html/controls/twitter.css
+++ b/html/controls/twitter.css
@@ -9,11 +9,21 @@
  */
 
 /* Main controls */
-  table.Layout { border: 1px solid black; width: 100%; }
-  table.Layout tr>td { width: 50%; }
+  #Layout { border: 1px solid black; width: 100%; }
+  #Layout>tbody>tr>td { width: 50%; text-align: center; }
 
   p.Error:not(.Show) { display: none; }
 
   p.LogInStatus:not(.LoggedIn) a.LoggedIn { display: none; }
   p.LogInStatus.LoggedIn a.NotLoggedIn { display: none; }
 /* End Main controls */
+
+/* ConditionalTweets table */
+  #ConditionalTweets { width: 100%; }
+  #ConditionalTweets>tbody>tr.Template { display: none; }
+  #ConditionalTweets th.Remove { width: 20%; }
+  #ConditionalTweets th.Condition { width: 40%; }
+  #ConditionalTweets th.Tweet { width: 40%; }
+  #ConditionalTweets>tbody>tr:nth-child(odd)>td { background: #eee; }
+  #ConditionalTweets>tbody>tr:nth-child(even)>td { background: #ccc; }
+/* End ConditionalTweets table */
