--- a/html/controls/twitter.css
+++ b/html/controls/twitter.css
@@ -9,26 +9,43 @@
  */
 
 /* Main controls */
-  #Layout { border: 1px solid black; width: 100%; }
-  #Layout>tbody>tr>td { width: 50%; text-align: center; }
-
-  p.Error:not(.Show) { display: none; }
+  p.Center { text-align: center; }
 
   p.LogInStatus:not(.LoggedIn) a.LoggedIn { display: none; }
   p.LogInStatus.LoggedIn a.NotLoggedIn { display: none; }
+
+  p.Error:not(.Show) { display: none; }
 /* End Main controls */
+
+/* User Tweets */
+  #UserTweets { width: 100%; }
+  #UserTweets td { width: 100%; text-align: center; }
+  #UserTweets>tbody>tr:nth-child(odd)>td { background: #eee; }
+  #UserTweets>tbody>tr:nth-child(even)>td { background: #ccc; }
+/* End User Tweets */
+
+/* AddConditionalTweet controls */
+  p.AddConditionalTweet { text-align: center; }
+  p.AddConditionalTweet span.Condition { display: inline-block; }
+  p.AddConditionalTweet span.Tweet { display: inline-block; }
+  p.AddConditionalTweet input.UpdateId { display: none; }
+  p.AddConditionalTweet:not(.Update) button.Add span.Update { display: none; }
+  p.AddConditionalTweet.Update button.Add span.Add { display: none; }
+  p.AddConditionalTweet:not(.Update) button.Cancel { display: none; }
+/* End AddConditionalTweet controls */
 
 /* ConditionalTweets table */
   #ConditionalTweets { width: 100%; }
   #ConditionalTweets>tbody>tr.Template { display: none; }
-  #ConditionalTweets th.Remove { width: 20%; }
-  #ConditionalTweets th.Condition { width: 40%; }
-  #ConditionalTweets th.Tweet { width: 40%; }
+  #ConditionalTweets td.Remove { width: 10%; }
+  #ConditionalTweets td.Condition { width: 40%; }
+  #ConditionalTweets td.Tweet { width: 40%; }
+  #ConditionalTweets td.Edit { width: 10%; }
   #ConditionalTweets>tbody>tr:nth-child(odd)>td { background: #eee; }
   #ConditionalTweets>tbody>tr:nth-child(even)>td { background: #ccc; }
 /* End ConditionalTweets table */
 
 /* ShowFormatSpecifiersDialog */
-  div.ShowFormatSpecifiersDialog table { width: 100%; }
-  div.ShowFormatSpecifiersDialog table td { width: 50%; }
+  #HelpText table { width: 100%; }
+  #HelpText table td { width: 50%; }
 /* End ShowFormatSpecifiersDialog */
