--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -52,6 +52,7 @@ table.RowTable { border-spacing: 0px; }
   #TeamTime table.Team tr.Name td.Name div { max-height: 100px; max-width: 300px; overflow: hidden; font-size: 150%; }
   #TeamTime table.Team tr.Name td.Logo img { height: 50px; vertical-align: middle; }
   #TeamTime table.Team tr.Score td.Score a { font-size: 300%; }
+  #TeamTime table.Team tr.Score td.Score a.Change { font-size: 200%; line-height: 175%; }
   #TeamTime table.Team tr.Timeout td.Timeouts a { font-size: 200%; }
   #TeamTime table.Team tr.Jammer td.Jammer:not(.ByName) select.Jammer.ByName { display: none; }
   #TeamTime table.Team tr.Jammer td.Jammer:not(.ByNumber) select.Jammer.ByNumber { display: none; }
