--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -58,6 +58,7 @@ table.RowTable { border-spacing: 0px; }
   #TeamTime table.Team tr.Jammer td.Jammer:not(.ByNumber) select.Jammer.ByNumber { display: none; }
   #TeamTime table.Team tr.Jammer td.Jammer:not(.AlphaSort) select.Jammer.AlphaSort { display: none; }
   #TeamTime table.Team tr.Jammer td.Jammer:not(.NumSort) select.Jammer.NumSort { display: none; }
+  #TeamTime table.Team tr.Pass td.Pass a { font-size: 150%; }
 
   #TeamTime table.Time>tbody>tr>td { width: 20%; }
   #TeamTime table.Time tr.Name td.Name.Running { background: #3f3; }
