--- a/html/controls/media_map.css
+++ b/html/controls/media_map.css
@@ -22,12 +22,14 @@
 #controls div.ControlBox {
     border: 1px solid black;
     border-radius: 15px;
+    overflow: hidden;
 }
 #controls div.ControlBox:not(.Show) { display: none; }
 
 #controls a.LeagueName { font-weight: bold; font-size: 125%; }
 #controls div.Template { display: none; }
 #controls div.Image div.ImageBox {
+    background: #ccc;
     display: -webkit-flex;
     -webkit-justify-content: center;
     -webkit-align-items: center;
