--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -11,17 +11,10 @@
 
 #mainDiv div { position: absolute; }
 #mainDiv>div.View { width: 100%; height: 100%; }
-#mainDiv>div.View:not(.Show) { opacity: 0; }
+#mainDiv>div.View:not(.Show) { opacity: 0; z-index: -1; }
 
 div.full { height: 100%; width: 100%; border-radius: inherit; }
 div.RedBox { background: #ff0000; opacity: 0.6; }
-
-/* background images */
-div.WhiteBox {
-  background: url('/images/whitebox.jpg');
-  background-size: 100% 100%; -moz-background-size: 100% 100%;
-  box-shadow: inset -0.03em -0.05em 0.15em rgba(0,0,0,0.5);
-}
 
 /* Fixed-size text containers/elements */
 div.TextContainer { text-align: center; }
@@ -31,22 +24,6 @@ div.TextContainer>a { position: relative; }
 a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
 
 
-/* http://net.tutsplus.com/tutorials/html-css-techniques/quick-tip-understanding-css3-gradients/ */
-#sbDiv {
-  background: #222222;
-  background: -moz-linear-gradient(top, #000000, #222222 50%, #777777 100%);
-  background: -webkit-gradient(linear, 0 0, 0 100%, from(#000000), color-stop(50%, #222222), color-stop(100%, #777777));
-}
-
-#sbDiv.invert {
-  background: -moz-linear-gradient(top, #C0C0C0, #222222 50%, #000000 100%);
-  background: -webkit-gradient(linear, 0 0, 0 100%, from(#C0C0C0), color-stop(50%, #222222), color-stop(100%, #000000));
-}
-    
-#sbDiv.flatblack {
-  background: #000000;
-}
-    
 /* Views */
   #imageDiv>img { width: 100%; height: 100%; }
   #videoDiv>video { width: 100%; height: 100%; }
@@ -64,7 +41,7 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
   #sbDiv>div.Team>div.Name.NoName { top: -48%; }
   #sbDiv>div.Team>div.Name.ShowLogo { height: 16%; }
   #sbDiv>div.Team>div.Name.NoName.ShowLogo { top: -16%; }
-  #sbDiv>div.Team>div.Name>a { color: #ffffff; }
+  #sbDiv>div.Team>div.Name>a { color: #ffffff; padding-left: 10px; padding-right: 10px; display: inline-block; border-radius: 12% / 50%; }
 
   /* Team Logo sub-box */
   #sbDiv>div.Team>div.Logo { top: 16%; height: 32%; width: 100%; }
@@ -77,7 +54,10 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
   #sbDiv>div.Team2>div.Logo.ShowLogo,#sbDiv>div.Team1.SwapTeams>div.Logo.ShowLogo { left: 0%; right: auto; }
 
   /* Team Score sub-box */
-  #sbDiv>div.Team>div.Score { top: 49%; left: 23%; right: 23%; height: 26.5%; border-radius: 12% / 25%; }
+  #mainDiv.HideJamTotals>#sbDiv>div.Team>div.Score { top: 49%; left: 15%; right: 15%; height: 31.5%; border-radius: 12% / 25%; }
+  #mainDiv:not(.HideJamTotals)>#sbDiv>div.Team.Team1>div.Score,#mainDiv:not(.HideJamTotals)>#sbDiv>div.Team.Team2.SwapTeams>div.Score { top: 49%; left: 11%; right: 23%; height: 31.5%; border-radius: 12% / 25%; }
+  #mainDiv:not(.HideJamTotals)>#sbDiv>div.Team.Team2>div.Score,#mainDiv:not(.HideJamTotals)>#sbDiv>div.Team.Team1.SwapTeams>div.Score { top: 49%; left: 23%; right: 11%; height: 31.5%; border-radius: 12% / 25%; }
+
 
   /* Team Jammer sub-box */
   #sbDiv>div.Team>div.Jammer { bottom: 0%; width: 90%; height: 18%; }
@@ -116,128 +96,187 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
   #sbDiv>div.Team>div.Lead>div>a.Lead { color: #ffffff; }
 /* End Teams */
 
-/* Timeouts */
+/* Jam Points */
   /* Main box */
-  #Timeouts { left: 39%; top: 32%; right: 39%; height: 6%; }
+  #mainDiv.HideJamTotals .JamPoints { opacity: 0 !important; }
+  .JamPoints { left: 39.5%; top: 31%; right: 39.5%; height: 19.7%; }
+  .JamPoints>div.Name { left: 0.8%; top: 0%; width: 100%; height: 32%; border-radius: 8% / 25%; }
+
+  /* Number sub-boxes */
+  .JamPoints>div.Number { bottom: 0%; width: 47%; height: 60%; border-radius: 25%/ 25%; }
+  .JamPoints>div.Team1,.JamPoints>div.Team2.SwapTeams { left: 0.8%; right: auto; }
+  .JamPoints>div.Team2,.JamPoints>div.Team1.SwapTeams { left: auto; right: 0.8%; }
+/* End Jam Points */
+
+
+/* Timeouts - No Jam Totals */
+  /* Main box */
+  #mainDiv:not(.HideJamTotals) .Timeouts:not(.JamTotals) { opacity: 0 !important; }
+  .Timeouts { left: 43.5%; top: 31%; right: 43.5%; height: 17%; }
 
   /* Name sub-box */
-  #Timeouts>div.Name { left: 22%; top: 10.5%; width: 55.75%; height: 70%; border-radius: 8% / 25%; }
+  .Timeouts:not(.JamTotals)>div.Name { left: 0%; top: 0%; width: 100%; height: 30%; border-radius: 8% / 25%; }
 
   /* Number sub-boxes */
-  #Timeouts>div.Number { bottom: 0%; width: 20%; height: 100%; border-radius: 25%/ 25%; }
-  #Timeouts>div.Team1,#Timeouts>div.Team2.SwapTeams { left: 0%; right: auto; }
-  #Timeouts>div.Team2,#Timeouts>div.Team1.SwapTeams { left: auto; right: 0%; }
-/* End Timeouts */
+  .Timeouts:not(.JamTotals)>div.Number { bottom: 0%; width: 45%; height: 50%; border-radius: 25%/ 25%; }
+  .Timeouts:not(.JamTotals)>div.Team1,.Timeouts:not(.JamTotals)>div.Team2.SwapTeams { left: 0%; right: auto; }
+  .Timeouts:not(.JamTotals)>div.Team2,.Timeouts:not(.JamTotals)>div.Team1.SwapTeams { left: auto; right: 0%; }
+/* End Timeouts - No Jam Totals */
 
-/* Official Reviews */
+  .Dot, .Dot.Active { border-radius: 100%; }
+  .Dot { background: #000000; }
+  .Dot.Active { background: #FF0000; opacity: 0; }
+  .Dot.Used { opacity: 0; }
+
+/* Timeouts - Jam Totals */
   /* Main box */
-  #OfficialReview { left: 39%; top: 40%; right: 39%; height: 6%; }
+  #mainDiv.HideJamTotals .Timeouts.JamTotals { opacity: 0 !important; }
+  .Timeouts.JamTotals { left: 0.5%; top: 31%; right: 0.5%; height: 12.8%; }
+  
+  /* Number sub-boxes */
+  .Timeouts.JamTotals>div.Number { bottom: 0%; width: 4%; height: 100%; border-radius: 25%/ 12%; }
+  .Timeouts.JamTotals>div.Team1,.Timeouts.JamTotals>div.Team2.SwapTeams { left: 0%; right: auto; }
+  .Timeouts.JamTotals>div.Team2,.Timeouts.JamTotals>div.Team1.SwapTeams { left: auto; right: 0%; }
+ 
+  .Timeouts.JamTotals .TextContainer .Dot { width: 60%; height: 24%; left: 19%; }
+  .Timeouts.JamTotals .Timeout1 { top:  5%; }
+  .Timeouts.JamTotals .Timeout2 { top: 37%; }
+  .Timeouts.JamTotals .Timeout3 { top: 70%; }
+/* End Timeouts - Jam Totals */
+
+/* Official Reviews - No Jam Totals */
+  /* Main box */
+  #mainDiv:not(.HideJamTotals) .OfficialReviews:not(.JamTotals) { opacity: 0 !important; }
+  .OfficialReviews:not(.JamTotals) { left: 0%; top: 31%; right: 0%; height: 17%; }
 
   /* Name sub-boxes */
-  #OfficialReview>div.Name { left: 35%; top: 9%; width: 30%; height: 81%; border-radius: 20% / 25%; }
-  #OfficialReview>div.Team2.Name { right: 0.8%; top: 0%; width: 6%; height: 30%; border-radius: 20% / 25%; }
+  .OfficialReviews:not(.JamTotals)>div.Team1.Name { left: 0.8%; top: 0%; width: 6%; height: 30%; border-radius: 20% / 25%; }
+  .OfficialReviews:not(.JamTotals)>div.Team2.Name { right: 0.8%; top: 0%; width: 6%; height: 30%; border-radius: 20% / 25%; }
 
   /* Number sub-boxes */
-  #OfficialReview>div.Number { bottom: 0%; width: 20%; height: 100%; border-radius: 25%/ 25%; }
-  #OfficialReview>div.Team1,#OfficialReview>div.Team2.SwapTeams { left: 0%; right: auto; }
-  #OfficialReview>div.Team2,#OfficialReview>div.Team1.SwapTeams { left: auto; right: 0%; }
-/* End Official Reviews */
+  .OfficialReviews:not(.JamTotals)>div.Number { bottom: 0%; width: 6%; height: 50%; border-radius: 25%/ 25%; }
+  .OfficialReviews:not(.JamTotals)>div.Team1,.OfficialReviews:not(.JamTotals)>div.Team2.SwapTeams { left: 0.8%; right: auto; }
+  .OfficialReviews:not(.JamTotals)>div.Team2,.OfficialReviews:not(.JamTotals)>div.Team1.SwapTeams { left: auto; right: 0.8%; }
+/* End Official Reviews - No Jam Totals */
+
+/* Official Reviews - Jam Totals */
+  /* Main box */
+  #mainDiv.HideJamTotals .OfficialReviews.JamTotals { opacity: 0 !important; }
+  .OfficialReviews.JamTotals { left: 0.5%; top: 45.2%; right: 0.5%; height: 5.5%; }
+  
+  /* Name sub-boxes */
+  .OfficialReviews.JamTotals>div.Name { left: 36%; top: 6%; width: 29%; height: 91%; border-radius: 20% / 25%; }
+  .OfficialReviews.JamTotals>div.Team2.Name { right: 0.8%; top: 0%; width: 6%; height: 30%; border-radius: 20% / 25%; }
+  
+  /* Number sub-boxes */
+  .OfficialReviews.JamTotals>div.Number { bottom: 0%; width: 4%; height: 100%; border-radius: 25%/ 25%; }
+  .OfficialReviews.JamTotals>div.Team1,.OfficialReviews.JamTotals>div.Team2.SwapTeams { left: 0%; right: auto; }
+  .OfficialReviews.JamTotals>div.Team2,.OfficialReviews.JamTotals>div.Team1.SwapTeams { left: auto; right: 0%; }
+  
+  .OfficialReviews.JamTotals .OfficialReview { width: 60%; left: 19%; top: 23%; height: 55%; }
+/* End Official Reviews - Jam Totals */
 
 /* Period */
   /* Main box */
-  #Period { right: 100%; top: 59%; width: 50%; bottom: 0%; }
-  #Period.ShowJam { right: 50%; }
+  .Period { right: 100%; top: 59%; width: 50%; bottom: 0%; }
+  .Period.ShowJam { right: 50%; }
 
   /* Name sub-box */
-  #Period>div.Name { top: 15%; left: 18%; width: 64%; height: 24%; border-radius: 8.5% / 30%; }
-  #Period>div.Name.TextContainer { font-size: 9.5%; }
-  #Period>div.Name.TextContainer>a { top: -10%; }
-  #Period:not(.Overtime)>div.Name.TextContainer.Overtime { display: none; }
-  #Period.Overtime>div.Name.TextContainer:not(.Overtime) { display: none; }
+  .Period>div.Name { top: 15%; left: 18%; width: 64%; height: 24%; border-radius: 8.5% / 30%; }
+  .Period>div.Name.TextContainer { font-size: 9.5%; }
+  .Period>div.Name.TextContainer>a { top: -10%; }
+  .Period:not(.Overtime)>div.Name.TextContainer.Overtime { display: none; }
+  .Period.Overtime>div.Name.TextContainer:not(.Overtime) { display: none; }
+  #mainDiv.box_flat .Period>div.Name { left: 10%; width: 80%; }
+  #mainDiv.box_flat .Period>div.Name.TextContainer>a { top: 0px; }
 
   /* Time sub-box */
-  #Period>div.Time { top: 44%; right: 10%; width: 80%; height: 39%; border-radius: 7% / 24%; }
-  #Period.Overtime>div.Time { display: none; }
+  .Period>div.Time { top: 44%; left: 10%; width: 80%; height: 39%; border-radius: 7% / 24%; }
+  #mainDiv.box_flat .Period>div.Time { top: 39%; }
+  .Period.Overtime>div.Time { display: none; }
 /* End Period */
 
 /* Period_small */
   /* Main box */
-  #Period_small { right: 100%; top: 59%; width: 50%; bottom: 0%; }
-  #Period_small.ShowTimeout,#Period_small.ShowLineup,#Period_small.TransTimeoutLineup,#Period_small.TransLineupTimeout
+  .Period_small { right: 100%; top: 59%; width: 50%; bottom: 0%; }
+  .Period_small.ShowTimeout,.Period_small.ShowLineup,.Period_small.TransTimeoutLineup,.Period_small.TransLineupTimeout
     { right: 50%; }
 
   /* Name sub-box */
-  #Period_small>div.Name { top: 0%; left: 58%; width: 24%; height: 29%; border-radius: 20% / 25%; }
-  #Period_small>div.Name.TextContainer { font-size: 10%; }
-  #Period_small:not(.Overtime)>div.Name.TextContainer.Overtime { display: none; }
-  #Period_small.Overtime>div.Name.TextContainer:not(.Overtime) { display: none; }
+  .Period_small>div.Name { top: 0%; left: 58%; width: 24%; height: 29%; border-radius: 20% / 25%; }
+  .Period_small>div.Name.TextContainer { font-size: 10%; }
+  .Period_small:not(.Overtime)>div.Name.TextContainer.Overtime { display: none; }
+  .Period_small.Overtime>div.Name.TextContainer:not(.Overtime) { display: none; }
 
   /* Time sub-box */
-  #Period_small>div.Time { top: 0%; left: 2%; width: 54%; height: 29%; border-radius: 7% / 24%; }
-  #Period_small.Overtime>div.Time { display: none; }
+  .Period_small>div.Time { top: 0%; left: 2%; width: 54%; height: 29%; border-radius: 7% / 24%; }
+  .Period_small.Overtime>div.Time { display: none; }
 /* End Period_small */
 
 /* Jam */
   /* Main box */
-  #Jam { left: 100%; top: 59%; width: 50%; bottom: 0%; }
-  #Jam.ShowJam { left: 50%; }
+  .Jam { left: 100%; top: 59%; width: 50%; bottom: 0%; }
+  .Jam.ShowJam { left: 50%; }
 
   /* Name sub-box */
-  #Jam>div.Name { top: 15%; left: 18%; width: 64%; height: 24%; border-radius: 8.5% / 30%; }
-  #Jam>div.Name.TextContainer { font-size: 9.5%; }
-  #Jam>div.Name.TextContainer>a { top: -10%; }
+  .Jam>div.Name { top: 15%; left: 18%; width: 64%; height: 24%; border-radius: 8.5% / 30%; }
+  .Jam>div.Name.TextContainer { font-size: 9.5%; }
+  .Jam>div.Name.TextContainer>a { top: -10%; }
+  #mainDiv.box_flat .Jam>div.Name { left: 10%; width: 80%; }
+  #mainDiv.box_flat .Jam>div.Name.TextContainer>a { top: 0px; }
 
   /* Time sub-box */
-  #Jam>div.Time { top: 44%; right: 10%; width: 80%; height: 39%; border-radius: 7% / 24%; }
+  .Jam>div.Time { top: 44%; right: 10%; width: 80%; height: 39%; border-radius: 7% / 24%; }
+  #mainDiv.box_flat .Jam>div.Time { top: 39%; }
 /* End Jam */
 
 /* Jam_small */
   /* Main box */
-  #Jam_small { left: 50%; top: 65%; width: 0%; height: 0%; font-size: 0%; }
-  #Jam_small.ShowTimeout,#Jam_small.ShowLineup,#Jam_small.TransTimeoutLineup,#Jam_small.TransLineupTimeout
+  .Jam_small { left: 50%; top: 65%; width: 0%; height: 0%; font-size: 0%; }
+  .Jam_small.ShowTimeout,.Jam_small.ShowLineup,.Jam_small.TransTimeoutLineup,.Jam_small.TransLineupTimeout
     { top: 59%; left: 0%; width: 100%; height: 41%; font-size: inherit; }
 
   /* Name sub-box */
-  #Jam_small>div.Name { top: 0%; left: 42%; width: 16.25%; height: 29%; border-radius: 15% / 25%; }
-  #Jam_small>div.Name.TextContainer { font-size: 10%; }
+  .Jam_small>div.Name { top: 0%; left: 42%; width: 16.25%; height: 29%; border-radius: 15% / 25%; }
+  .Jam_small>div.Name.TextContainer { font-size: 10%; }
 /* End Jam_small */
 
 /* Lineup */
   /* Main box */
-  #Lineup { left: 100%; top: 59%; width: 50%; bottom: 0%; }
-  #Lineup.ShowLineup { left: 50%; }
+  .Lineup { left: 100%; top: 59%; width: 50%; bottom: 0%; }
+  .Lineup.ShowLineup { left: 50%; }
 
   /* Name sub-box */
-  #Lineup>div.Name { top: 0%; right: 58%; width: 24%; height: 29%; border-radius: 20% / 25%; }
-  #Lineup>div.Name.TextContainer { font-size: 5%; }
+  .Lineup>div.Name { top: 0%; right: 58%; width: 24%; height: 29%; border-radius: 20% / 25%; }
+  .Lineup>div.Name.TextContainer { font-size: 5%; }
 
   /* Time sub-box */
-  #Lineup>div.Time { top: 0%; right: 2%; width: 54%; height: 29%; border-radius: 7% / 24%; }
+  .Lineup>div.Time { top: 0%; right: 2%; width: 54%; height: 29%; border-radius: 7% / 24%; }
 /* End Lineup */
 
 /* Timeout */
   /* Main box */
-  #Timeout { left: 100%; top: 59%; width: 50%; bottom: 0%; }
-  #Timeout.ShowTimeout { left: 50%; }
+  .Timeout { left: 100%; top: 59%; width: 50%; bottom: 0%; }
+  .Timeout.ShowTimeout { left: 50%; }
 
   /* Name sub-box */
-  #Timeout>div.Name { top: 0%; right: 58%; width: 24%; height: 29%; border-radius: 20% / 25%; }
-  #Timeout>div.Name.TextContainer { font-size: 5%; }
+  .Timeout>div.Name { top: 0%; right: 58%; width: 24%; height: 29%; border-radius: 20% / 25%; }
+  .Timeout>div.Name.TextContainer { font-size: 5%; }
 
   /* Time sub-box */
-  #Timeout>div.Time { top: 0%; right: 2%; width: 54%; height: 29%; border-radius: 7% / 24%; }
+  .Timeout>div.Time { top: 0%; right: 2%; width: 54%; height: 29%; border-radius: 7% / 24%; }
 /* End Timeout */
 
 /* Intermission */
   /* Main box */
-  #Intermission { left: 0%; top: 100%; width: 100%; height: 41%; }
-  #Intermission.ShowIntermission { top: 59%; }
+  .Intermission { left: 0%; top: 100%; width: 100%; height: 41%; }
+  .Intermission.ShowIntermission { top: 59%; }
 
   /* Name sub-box */
-  #Intermission>div.Name { top: 0%; left: 20%; width: 60%; height: 29%; border-radius: 5% / 20%; }
+  .Intermission>div.Name { top: 0%; left: 20%; width: 60%; height: 29%; border-radius: 5% / 20%; }
 
   /* Time sub-box */
-  #Intermission>div.Time { top: 36.5%; left: 20%; width: 60%; height: 56%; border-radius: 7% / 24%; }
+  .Intermission>div.Time { top: 36.5%; left: 20%; width: 60%; height: 56%; border-radius: 7% / 24%; }
 /* End Intermission */
 
 /* Sponsor Banner box */
@@ -253,13 +292,51 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
   #SponsorBox>div>img { width: 100%; height: 100%; }
 /* End Sponsor Banner box */
 
-/* Jam Points */
-  #JamPoints { left: 0%; top: 30.75%; right: 0%; height: 17%; }
-  #JamPoints>div.Team1,#JamPoints>div.Team2.SwapTeams { left: 0.5%; top: 0%; right: 89%; height: 99%; }
-  #JamPoints>div.Team1>div.Name  { top: 0%; left: 0%; right: 0%; height: 31.5%; border-radius: 12% / 25%; }
-  #JamPoints>div.Team1>div.Change { top: 40%; left: 10%; right: 10%; height: 56%; border-radius: 20% / 25%; }
-  #JamPoints>div.Team2,#JamPoints>div.Team1.SwapTeams { left: 89%; top: 0%; right: 0.5%; height: 99%; }
-  #JamPoints>div.Team2>div.Name { top: 0%; left: 0%; right: 0%; height: 31.5%; border-radius: 12% / 25%; }
-  #JamPoints>div.Team2>div.Change { top: 40%; left: 10%; right: 10%; height: 56%; border-radius: 20% / 25%; } 
-/* End Jam Points */
+/* background images */
+div.WhiteBox {
+  background: url('/images/whitebox.jpg');
+  background-size: 100% 100%; -moz-background-size: 100% 100%;
+  box-shadow: inset -0.03em -0.05em 0.15em rgba(0,0,0,0.5);
+}
+
+#mainDiv.box_flat div.WhiteBox {
+  background: #EFEFEF;
+  background: -moz-linear-gradient(top, #EFEFEF, #D4D4D4 100%);
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#EFEFEF), color-stop(100%, #D4D4D4));
+  box-shadow: none;
+  border-radius: 5px !important;
+}
+
+#mainDiv.box_flat .FlatDark {
+  color: #FFFFFF;
+}
+
+#mainDiv.box_flat div.WhiteBox.FlatDark {
+  background: #595959;
+  background: -moz-linear-gradient(top, #595959, #474747 100%);
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#595959), color-stop(100%, #474747));
+}
+
+#mainDiv.box_flat div.WhiteBox.FlatBottom {
+  border-radius: 5px 5px 0px 0px !important;
+}
+#mainDiv.box_flat div.WhiteBox.FlatTop {
+  border-radius: 0px 0px 5px 5px !important;
+}
+
+/* http://net.tutsplus.com/tutorials/html-css-techniques/quick-tip-understanding-css3-gradients/ */
+#mainDiv>#sbDiv {
+  background: #222222;
+  background: -moz-linear-gradient(top, #000000, #222222 50%, #777777 100%);
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#000000), color-stop(50%, #222222), color-stop(100%, #777777));
+}
+
+#mainDiv.bg_whitetoblack>#sbDiv {
+  background: -moz-linear-gradient(top, #C0C0C0, #222222 50%, #000000 100%);
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#C0C0C0), color-stop(50%, #222222), color-stop(100%, #000000));
+}
+
+#mainDiv.bg_black>#sbDiv {
+  background: #000000;
+}
 
