--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -1,32 +1,197 @@
 <!DOCTYPE html>
-<html><head><title>CRG ScoreBoard Display</title>
+<html>
+	<head>
+		<title>CRG ScoreBoard Display</title>
+		<!--
+			Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
+			
+			This file is part of the Carolina Rollergirls (CRG) ScoreBoard.
+			The CRG ScoreBoard is licensed under either the GNU General Public
+			License version 3 (or later), or the Apache License 2.0, at your option.
+			See the file COPYING for details.
+		-->
+		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
+		<script type="text/javascript" src="/javascript/scoreboard.js"></script>
+		<link href="scoreboard.css" type="text/css" rel="stylesheet" />
+	</head>
+	<body class=" hasGoogleVoiceExt">
+		<div id="mainDiv">
+			<div id="sbDiv" class="Scoreboard View">
+				<div id="SponsorBox" class="ClockAnimation">
+					<div class="NextImg"><img src="" style="display: none;" /></div>
+					<div class="CurrentImg"><img src="" style="display: none;" /></div>
+				</div>
 
-<!--
- Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
+				<!-- Jam Totals -->
+				<div class="JamTotals Timeouts">
+					<div class="Team Team1 Number WhiteBox"></div>
+					<div class="Team Team1 Number TextContainer">
+						<div class="Timeout1 Dot"></div>
+						<div class="Timeout2 Dot"></div>
+						<div class="Timeout3 Dot"></div>
+						<div class="Timeout1 Dot Active"></div>
+						<div class="Timeout2 Dot Active"></div>
+						<div class="Timeout3 Dot Active"></div>
+					</div>
+					<div class="Team Team2 Number WhiteBox"></div>
+					<div class="Team Team2 Number TextContainer">
+						<div class="Timeout1 Dot"></div>
+						<div class="Timeout2 Dot"></div>
+						<div class="Timeout3 Dot"></div>
+						<div class="Timeout1 Dot Active"></div>
+						<div class="Timeout2 Dot Active"></div>
+						<div class="Timeout3 Dot Active"></div>
+					</div>
+				</div>
+				<div class="JamTotals OfficialReviews">
+					<div class="Team Team1 Number WhiteBox"></div>
+					<div class="Team Team1 Number TextContainer">
+						<div class="OfficialReview Dot"></div>
+						<div class="OfficialReview Dot Active"></div>
+					</div>
+					<div class="Team Team2 Number WhiteBox"></div>
+					<div class="Team Team2 Number TextContainer">
+						<div class="OfficialReview Dot"></div>
+						<div class="OfficialReview Dot Active"></div>
+					</div>
+				</div>
+				<div class="JamTotals JamPoints">
+					<!--
+					<div class="Name WhiteBox"></div>
+					<div class="Name TextContainer"><a>Points</a></div>
+					-->
+					<div class="Team Team1 Number WhiteBox"></div>
+					<div class="Team Team1 Number TextContainer"><a class="Number"></a></div>
+					<div class="Team Team2 Number WhiteBox"></div>
+					<div class="Team Team2 Number TextContainer"><a class="Number"></a></div>
+				</div>
 
- This file is part of the Carolina Rollergirls (CRG) ScoreBoard.
- The CRG ScoreBoard is licensed under either the GNU General Public
- License version 3 (or later), or the Apache License 2.0, at your option.
- See the file COPYING for details.
--->
-
-<script type="text/javascript" src="/external/jquery/jquery.js" ></script>
-
-<script type="text/javascript" src="/javascript/scoreboard.js" ></script>
-
-</head>
-
-<body>
-
-<div id="mainDiv" >
-
-  <div id="sbDiv" class="View"></div>
-  <div id="imageDiv" class="View"><img></img></div>
-  <div id="videoDiv" class="View"><video onended="this.play();"></video></div>
-  <div id="htmlDiv" class="View"><iframe></iframe></div>
-
-</div>
-
-</body>
-
+				<!-- No Jam Totals -->
+				<div class="Timeouts">
+					<div class="Name WhiteBox"></div>
+					<div class="Name TextContainer"><a>Timeouts</a></div>
+					<div class="Team Team1 Number WhiteBox">
+						<div class="RedBox full" style="display: none;"></div>
+					</div>
+					<div class="Team Team1 Number TextContainer"><a class="Number"></a></div>
+					<div class="Team Team2 Number WhiteBox">
+						<div class="RedBox full" style="display: none;"></div>
+					</div>
+					<div class="Team Team2 Number TextContainer"><a class="Number"></a></div>
+				</div>
+				<div class="OfficialReviews">
+					<div class="Team1 Name WhiteBox"></div>
+					<div class="Team1 Name TextContainer"><a>OR</a></div>
+					<div class="Team Team1 Number WhiteBox"><div class="RedBox full" style="display: none;"></div></div>
+					<div class="Team Team1 Number TextContainer"><a class="Number"></a></div>
+					<div class="Team2 Name WhiteBox"></div>
+					<div class="Team2 Name TextContainer"><a>OR</a></div>
+					<div class="Team Team2 Number WhiteBox"><div class="RedBox full" style="display: none;"></div></div>
+					<div class="Team Team2 Number TextContainer"><a class="Number"></a></div>
+				</div>
+				<div class="Team Team1">
+					<div class="TeamAnimationQueue"></div>
+					<div class="TeamAnimationFlag"></div>
+					<div class="Name TextContainer"><a class="Name"></a></div>
+					<div class="Logo">
+						<div class="Inner"><img class="Logo" /></div>
+					</div>
+					<div class="Score WhiteBox"></div>
+					<div class="Score TextContainer"><a class="Score"></a></div>
+					<div class="Jammer ClockAnimation">
+						<div class="TextContainer"><a class="Jammer"></a></div>
+					</div>
+					<div class="Jammer ClockAnimation">
+						<div class="TextContainer"><a class="Pulse" style="opacity: 0;"></a></div>
+					</div>
+					<div class="Lead ClockAnimation">
+						<div class="TextContainer"><a class="Lead">Lead</a></div>
+					</div>
+				</div>
+				<div class="Team Team2">
+					<div class="TeamAnimationQueue"></div>
+					<div class="TeamAnimationFlag"></div>
+					<div class="Name TextContainer"><a class="Name"></a></div>
+					<div class="Logo">
+						<div class="Inner"><img class="Logo" /></div>
+					</div>
+					<div class="Score WhiteBox"></div>
+					<div class="Score TextContainer"><a class="Score"></a></div>
+					<div class="Jammer ClockAnimation">
+						<div class="TextContainer"><a class="Jammer"></a></div>
+					</div>
+					<div class="Jammer ClockAnimation">
+						<div class="TextContainer"><a class="Pulse" style="opacity: 0;"></a></div>
+					</div>
+					<div class="Lead ClockAnimation">
+						<div class="TextContainer"><a class="Lead">Lead</a></div>
+					</div>
+				</div>
+				<div class="ClockAnimationQueue"></div>
+				<div class="ClockAnimationFlag ClockAnimation"></div>
+				<div class="Period Clock ClockAnimation">
+					<div class="Name WhiteBox FlatBottom FlatDark"></div>
+					<div class="Name TextContainer FlatDark">
+						<a><span class="Name">Period</span><span class="space"> </span><span class="Number"></span></a>
+					</div>
+					<div class="Overtime Name TextContainer FlatDark"><a><span>Overtime</span></a></div>
+					<div class="Time WhiteBox FlatTop"></div>
+					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
+				</div>
+				<div class="Period_small Clock ClockAnimation">
+					<div class="Name WhiteBox"></div>
+					<div class="Name TextContainer"><a><span class="Name">P</span><span class="Number"></span></a></div>
+					<div class="Overtime Name TextContainer"><a><span>OT</span></a></div>
+					<div class="Time WhiteBox"></div>
+					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
+				</div>
+				<div class="Jam Clock ClockAnimation">
+					<div class="Name WhiteBox FlatBottom FlatDark"></div>
+					<div class="Name TextContainer FlatDark">
+						<a><span class="Name">Jam</span><span class="space"> </span><span class="Number"></span></a>
+					</div>
+					<div class="Time WhiteBox FlatTop"></div>
+					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
+				</div>
+				<div class="Jam_small Clock ClockAnimation">
+					<div class="Name WhiteBox"></div>
+					<div class="Name TextContainer"><a><span class="Name">J</span><span class="Number"></span></a></div>
+				</div>
+				<div class="Lineup Clock ClockAnimation">
+					<div class="Name WhiteBox"></div>
+					<div class="Name TextContainer"><a><span class="Name">Line Up</span></a></div>
+					<div class="Time WhiteBox"></div>
+					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
+				</div>
+				<div class="Timeout Clock ClockAnimation">
+					<div class="Name WhiteBox"><div class="RedBox full"></div></div>
+					<div class="Name TextContainer"><a><span class="Name">Time Out</span></a></div>
+					<div class="Time WhiteBox"></div>
+					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
+				</div>
+				<div class="Intermission Clock ClockAnimation">
+					<div class="Name WhiteBox"></div>
+					<div class="Name TextContainer">
+						<a>
+							<span class="Unofficial 0" style="display: none;"></span>
+							<span class="Name 0" style="display: none;"></span>
+							<span class="Unofficial 1"></span>
+							<span class="Name 1"></span>
+							<span class="Unofficial 2" style="display: none;"></span>
+							<span class="Name 2" style="display: none;"></span>
+						</a>
+					</div>
+					<div class="Time WhiteBox"></div>
+					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
+				</div>
+			</div>
+			<div id="imageDiv" class="View"><img /></div>
+			<div id="videoDiv" class="View"><video onended="this.play();"></video></div>
+			<div id="htmlDiv" class="View"><iframe></iframe></div>
+			<div style="width: 100%; height: 100%; background-color: rgb(128, 128, 128); position: absolute; bottom: 100%; background-position: initial initial; background-repeat: initial initial;"></div>
+			<div style="width: 100%; height: 100%; background-color: rgb(128, 128, 128); position: absolute; top: 100%; background-position: initial initial; background-repeat: initial initial;"></div>
+			<div style="width: 100%; height: 100%; background-color: rgb(128, 128, 128); position: absolute; left: 100%; background-position: initial initial; background-repeat: initial initial;"></div>
+			<div style="width: 100%; height: 100%; background-color: rgb(128, 128, 128); position: absolute; right: 100%; background-position: initial initial; background-repeat: initial initial;"></div>
+		</div>
+	</body>
 </html>
