--- a/html/components/data-management-tab.css
+++ b/html/components/data-management-tab.css
@@ -23,11 +23,11 @@
 #DataManagementTab table.Type>thead>tr.Type>th>button.Right { float: right; }
 #DataManagementTab table.Type>thead>tr.Controls { text-align: center; }
 #DataManagementTab table.Type>tbody>tr { text-align: center; }
-#DataManagementTab table.Type button.ui-widget { font-size: 75%; }
+#DataManagementTab table.Type .ui-button { font-size: 75%; }
 #DataManagementTab table.Type col:nth-of-type(1) { width: 15%; }
 #DataManagementTab table.Type col:nth-of-type(2) { width: 20%; }
-#DataManagementTab table.Type col:nth-of-type(3) { width: 20%; }
-#DataManagementTab table.Type col:nth-of-type(4) { width: 45%; }
+#DataManagementTab table.Type col:nth-of-type(3) { width: 50%; }
+#DataManagementTab table.Type col:nth-of-type(4) { width: 15%; }
 
 	/* Colors, round corners */
 #DataManagementTab table.Type tr.Type>th { background: #ccc; }
