--- a/html/components/settings-tab.css
+++ b/html/components/settings-tab.css
@@ -1,12 +1,12 @@
-#ScoreBoardView>table { width: 100%; border-spacing: 0px; }
-#ScoreBoardView.UsePreview>tbody>tr.View { display: none; }
-#ScoreBoardView:not(.UsePreview)>tbody>tr.Preview { display: none; }
-#ScoreBoardView>tbody>tr>td { text-align: center; width: 100%; background: #eee; }
-#ScoreBoardView>tbody>tr>td.Header { background: #ccc; border-radius: 12px 12px 0px 0px; }
-#ScoreBoardView>tbody>tr>td.Header.NoChildren { border-radius: 12px; }
-#ScoreBoardView>tbody>tr>td.Footer { border-radius: 0px 0px 12px 12px; }
-#ScoreBoardView>tbody>tr>td.PreviewControl a { font-size: 150%; font-weight: bold; }
-#ScoreBoardView>tbody>tr>td.ViewFrames iframe { width: 100%; height: 300px; }
+#ScoreBoardSettings>table { width: 100%; border-spacing: 0px; }
+#ScoreBoardSettings.UsePreview>tbody>tr.View { display: none; }
+#ScoreBoardSettings:not(.UsePreview)>tbody>tr.Preview { display: none; }
+#ScoreBoardSettings>tbody>tr>td { text-align: center; width: 100%; background: #eee; }
+#ScoreBoardSettings>tbody>tr>td.Header { background: #ccc; border-radius: 12px 12px 0px 0px; }
+#ScoreBoardSettings>tbody>tr>td.Header.NoChildren { border-radius: 12px; }
+#ScoreBoardSettings>tbody>tr>td.Footer { border-radius: 0px 0px 12px 12px; }
+#ScoreBoardSettings>tbody>tr>td.PreviewControl a { font-size: 150%; font-weight: bold; }
+#ScoreBoardSettings>tbody>tr>td.ViewFrames iframe { width: 100%; height: 300px; }
 
 /* Intermission Control Dialog */
 	table.IntermissionControlDialog { width: 100%; border-spacing: 0px; }
